--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,39 +29,11 @@ jobs:
       run: |
         mkdir chromium && cd chromium
         fetch --nohooks --no-history android
-        cd src
 
-    - name: Install build dependencies
-      run: |
-        cd chromium/src
-        sudo bash build/install-build-deps-android.sh --no-prompt
-
-    - name: Run hooks
-      run: |
-        cd chromium/src
-        gclient runhooks
-
-    - name: Configure GN build
-      run: |
-        cd chromium/src
-        gn args out/Default << EOF
-        target_os = "android"
-        target_cpu = "arm64"
-        is_debug = false
-        symbol_level = 1
-        enable_nacl = false
-        blink_symbol_level = 0
-        EOF
-
-    - name: Build Chrome APK
-      run: |
-        cd chromium/src
-        autoninja -C out/Default -j 64 chrome_public_apk
+    - uses: valeriangalliat/action-sshd-cloudflared@v3
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
         name: chromium-android-arm64
-        path: |
-          chromium/src/out/Default/apks/*.apk
-          chromium/src/out/Default/apks/*.aab
+        path: /mnt/up
